; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/commands/extr_utility_hook.c_PostProcessUtility.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/commands/extr_utility_hook.c_PostProcessUtility.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@IndexStmt = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @PostProcessUtility to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @PostProcessUtility(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = load i32, i32* @IndexStmt, align 4
  %5 = call i64 @IsA(i32* %3, i32 %4)
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %12

7:                                                ; preds = %1
  %8 = load i32, i32* @IndexStmt, align 4
  %9 = load i32*, i32** %2, align 8
  %10 = call i32 @castNode(i32 %8, i32* %9)
  %11 = call i32 @PostProcessIndexStmt(i32 %10)
  br label %12

12:                                               ; preds = %7, %1
  ret void
}

declare dso_local i64 @IsA(i32*, i32) #1

declare dso_local i32 @PostProcessIndexStmt(i32) #1

declare dso_local i32 @castNode(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
